--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
     <h2>Contato</h2>
     <p>Se você tiver dúvidas ou sugestões sobre esta Política de Privacidade, entre em contato pelo e-mail:  
-    <a href="mailto:seuemail@exemplo.com">seuemail@exemplo.com</a></p>
+    <a href="mailto:seuemail@exemplo.com">devtuska@gmail.com</a></p>
 
     <p>Obrigado por utilizar o <strong>UnitTools</strong>!</p>
   </div>
